<resources>
    <string name="app_name">abs</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_item_booking">Booking</string>
    <string name="nav_item_Economy">Economy</string>
    <string name="nav_item_check">Check in</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_feedback">feed back</string>
    <string name="nav_item_info">information</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_navigation">home_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fra_info_contnt">currently employs more than 250 people in its head offices in New York, London and Munich as well as remote workers from Israel, Brazil, Japan, Germany, Slovenia, Spain, Poland, France, Russia, Canada, the UK, and the United States. The company is committed to diversity in the workplace and is currently hiring.</string>
    <string name="title_over">Over</string>
    <string name="feedback_header">have feedback</string>
    <string name="checkin_header">check in</string>
    <string name="checkin_booking_reference">Booking Reference</string>
    <string name="checkin_last_name">Last name</string>
    <string name="checkin_button">Check-in</string>
    <string name="history_emptty_message">You r flight booking history</string>
</resources>
