<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_menu_booking_amadeus"
            android:title="@string/nav_item_booking" />
        <item
            android:id="@+id/nav_economy"
            android:icon="@drawable/ic_menu_book_economy"
            android:title="@string/nav_item_Economy" />
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_menu__check"
            android:title="@string/nav_item_check" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_item_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/nav_item_feedback" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/nav_item_info" />
        </menu>
    </item>

</menu>
